# incident-agent

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
infra/nginx/: nginx.conf
services/backend/: Dockerfile  package.json  tsconfig.json
services/backend/src/: app.ts  index.ts
services/backend/src/controllers/: admin.controller.ts
services/backend/src/middlewares/: auth.middleware.ts  error.middleware.ts  rbac.middleware.ts
services/backend/src/models/: admin.model.ts  analytics.model.ts  audit.model.ts  incident.model.ts  runbook-version.model.ts  runbook.model.ts  sla-policy.model.ts  user.model.ts
services/backend/src/routes/: admin-auth.router.ts  analytics.router.ts  auth.router.ts  health.router.ts  incidents.router.ts  rca.router.ts  runbooks.router.ts  users.router.ts  webhooks.router.ts
services/backend/src/sockets/: socket.ts
services/backend/src/types/: express.d.ts  index.ts
services/backend/src/utils/: database.ts  logger.ts  redis.ts
services/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
services/frontend/src/: App.tsx  index.css  main.tsx
services/frontend/src/pages/: Admin.tsx  AdminAnalytics.tsx  AdminDashboard.tsx  AdminIncidents.tsx  AdminLayout.tsx  AdminReports.tsx  AdminRunbooks.tsx  AdminSettings.tsx  ChatbotAssistant.tsx  Dashboard.tsx  IncidentDetail.tsx  LoginRegister.tsx  MyIncidents.tsx  Runbooks.tsx  UserDashboard.tsx  (+1 more)
services/genai-service/: Dockerfile  README.md  pyproject.toml
services/genai-service/app/: main.py
